[gd_scene load_steps=81 format=3 uid="uid://bccv3j8afdqpw"]

[ext_resource type="Script" path="res://scripts/plant_book.gd" id="1_bd801"]
[ext_resource type="Texture2D" uid="uid://c22qp5qfpu6sc" path="res://16x16/Sprites/Book_Sheet_64x64 - Copy.png" id="2_e4igy"]
[ext_resource type="Texture2D" uid="uid://bmi8brty037td" path="res://16x16/Sprites/Next_Button.png" id="3_fj6l6"]
[ext_resource type="Texture2D" uid="uid://bcykmjotikxmt" path="res://16x16/Sprites/Back_Button.png" id="4_sbxrk"]
[ext_resource type="Texture2D" uid="uid://ocvw8qdb1c46" path="res://16x16/Sprites/ChatGPT Image Oct 17, 2025, 03_11_17 AM.png" id="5_hbj6e"]

[sub_resource type="AtlasTexture" id="AtlasTexture_43ta5"]
atlas = ExtResource("2_e4igy")
region = Rect2(0, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v5p4r"]
atlas = ExtResource("2_e4igy")
region = Rect2(64, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lonnk"]
atlas = ExtResource("2_e4igy")
region = Rect2(128, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t853d"]
atlas = ExtResource("2_e4igy")
region = Rect2(192, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jyjhg"]
atlas = ExtResource("2_e4igy")
region = Rect2(256, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_83mgc"]
atlas = ExtResource("2_e4igy")
region = Rect2(320, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_un1nl"]
atlas = ExtResource("2_e4igy")
region = Rect2(384, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hesov"]
atlas = ExtResource("2_e4igy")
region = Rect2(448, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jucqu"]
atlas = ExtResource("2_e4igy")
region = Rect2(512, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ul0b0"]
atlas = ExtResource("2_e4igy")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fekho"]
atlas = ExtResource("2_e4igy")
region = Rect2(512, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r7kqs"]
atlas = ExtResource("2_e4igy")
region = Rect2(448, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rs04o"]
atlas = ExtResource("2_e4igy")
region = Rect2(384, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sofbx"]
atlas = ExtResource("2_e4igy")
region = Rect2(320, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vbjig"]
atlas = ExtResource("2_e4igy")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fhkad"]
atlas = ExtResource("2_e4igy")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_w6lmx"]
atlas = ExtResource("2_e4igy")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j4wwm"]
atlas = ExtResource("2_e4igy")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nw15g"]
atlas = ExtResource("2_e4igy")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8p54i"]
atlas = ExtResource("2_e4igy")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q6013"]
atlas = ExtResource("2_e4igy")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8kx6q"]
atlas = ExtResource("2_e4igy")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_65pl7"]
atlas = ExtResource("2_e4igy")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a2xvm"]
atlas = ExtResource("2_e4igy")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jar26"]
atlas = ExtResource("2_e4igy")
region = Rect2(320, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dw7yg"]
atlas = ExtResource("2_e4igy")
region = Rect2(384, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ynudj"]
atlas = ExtResource("2_e4igy")
region = Rect2(448, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vmkdh"]
atlas = ExtResource("2_e4igy")
region = Rect2(512, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gyf37"]
atlas = ExtResource("2_e4igy")
region = Rect2(512, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_l6wxi"]
atlas = ExtResource("2_e4igy")
region = Rect2(448, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_36bd4"]
atlas = ExtResource("2_e4igy")
region = Rect2(384, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cm8fv"]
atlas = ExtResource("2_e4igy")
region = Rect2(320, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dpd8s"]
atlas = ExtResource("2_e4igy")
region = Rect2(256, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mohtr"]
atlas = ExtResource("2_e4igy")
region = Rect2(192, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_c7vhd"]
atlas = ExtResource("2_e4igy")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_m38dc"]
atlas = ExtResource("2_e4igy")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_shcwm"]
atlas = ExtResource("2_e4igy")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qoxba"]
atlas = ExtResource("2_e4igy")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tqi14"]
atlas = ExtResource("2_e4igy")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1vob5"]
atlas = ExtResource("2_e4igy")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cl5kc"]
atlas = ExtResource("2_e4igy")
region = Rect2(192, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1te66"]
atlas = ExtResource("2_e4igy")
region = Rect2(256, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_550s3"]
atlas = ExtResource("2_e4igy")
region = Rect2(320, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_10rch"]
atlas = ExtResource("2_e4igy")
region = Rect2(384, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wyox1"]
atlas = ExtResource("2_e4igy")
region = Rect2(448, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nor4e"]
atlas = ExtResource("2_e4igy")
region = Rect2(512, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q5ytr"]
atlas = ExtResource("2_e4igy")
region = Rect2(512, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uj0up"]
atlas = ExtResource("2_e4igy")
region = Rect2(448, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p7fb3"]
atlas = ExtResource("2_e4igy")
region = Rect2(384, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nu86q"]
atlas = ExtResource("2_e4igy")
region = Rect2(320, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cv2ba"]
atlas = ExtResource("2_e4igy")
region = Rect2(256, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_snq31"]
atlas = ExtResource("2_e4igy")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vmaow"]
atlas = ExtResource("2_e4igy")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5fqy7"]
atlas = ExtResource("2_e4igy")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hwqkd"]
atlas = ExtResource("2_e4igy")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xumqq"]
atlas = ExtResource("2_e4igy")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ouioh"]
atlas = ExtResource("2_e4igy")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_joq5w"]
atlas = ExtResource("2_e4igy")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sacfy"]
atlas = ExtResource("2_e4igy")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_chx3s"]
atlas = ExtResource("2_e4igy")
region = Rect2(256, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1erng"]
atlas = ExtResource("2_e4igy")
region = Rect2(320, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4dqke"]
atlas = ExtResource("2_e4igy")
region = Rect2(384, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q4r2x"]
atlas = ExtResource("2_e4igy")
region = Rect2(448, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ecf5"]
atlas = ExtResource("2_e4igy")
region = Rect2(512, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1om1b"]
atlas = ExtResource("2_e4igy")
region = Rect2(512, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o0m72"]
atlas = ExtResource("2_e4igy")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tbx5c"]
atlas = ExtResource("2_e4igy")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0pwve"]
atlas = ExtResource("2_e4igy")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ihgab"]
atlas = ExtResource("2_e4igy")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_s7hle"]
atlas = ExtResource("2_e4igy")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5hxga"]
atlas = ExtResource("2_e4igy")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_eggmf"]
atlas = ExtResource("2_e4igy")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dugya"]
atlas = ExtResource("2_e4igy")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j1tbx"]
atlas = ExtResource("2_e4igy")
region = Rect2(512, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_4jh8x"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_43ta5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v5p4r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lonnk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t853d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jyjhg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_83mgc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_un1nl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hesov")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jucqu")
}],
"loop": false,
"name": &"close_book",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ul0b0")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fekho")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r7kqs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rs04o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sofbx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vbjig")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fhkad")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w6lmx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j4wwm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nw15g")
}],
"loop": false,
"name": &"first_page_back",
"speed": 13.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8p54i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q6013")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8kx6q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_65pl7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a2xvm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jar26")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dw7yg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ynudj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vmkdh")
}],
"loop": false,
"name": &"first_page_front",
"speed": 13.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gyf37")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l6wxi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_36bd4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cm8fv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dpd8s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mohtr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c7vhd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m38dc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_shcwm")
}],
"loop": false,
"name": &"last_page_back",
"speed": 13.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qoxba")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tqi14")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1vob5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cl5kc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1te66")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_550s3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_10rch")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wyox1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nor4e")
}],
"loop": false,
"name": &"last_page_front",
"speed": 13.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q5ytr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uj0up")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p7fb3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nu86q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cv2ba")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_snq31")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vmaow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5fqy7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hwqkd")
}],
"loop": false,
"name": &"middle_page_back",
"speed": 13.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xumqq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ouioh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_joq5w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sacfy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_chx3s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1erng")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4dqke")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q4r2x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ecf5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1om1b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xumqq")
}],
"loop": false,
"name": &"middle_page_front",
"speed": 13.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o0m72")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tbx5c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0pwve")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ihgab")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s7hle")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5hxga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eggmf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dugya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j1tbx")
}],
"loop": false,
"name": &"open_book",
"speed": 13.0
}]

[node name="PlantBook" type="Node2D"]
scale = Vector2(20, 15)
script = ExtResource("1_bd801")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_4jh8x")
animation = &"first_page_front"
autoplay = "default"

[node name="RightPage" type="Control" parent="."]
clip_contents = true
layout_mode = 3
anchors_preset = 0
offset_left = 1.0
offset_top = -49.0
offset_right = 142.0
offset_bottom = 162.0
scale = Vector2(0.51, 0.5)

[node name="Right" type="RichTextLabel" parent="RightPage"]
layout_mode = 0
offset_left = 3.92157
offset_right = 288.922
offset_bottom = 729.0
scale = Vector2(0.5, 0.3)
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 50
bbcode_enabled = true
text = "
Excerpt from “On Cultivated Flora and Their Comforts”

  ~Unknown
	   Author "
fit_content = true
scroll_active = false

[node name="LeftPage" type="Control" parent="."]
clip_contents = true
layout_mode = 3
anchors_preset = 0
offset_left = -75.0
offset_top = -49.0
offset_right = 66.0
offset_bottom = 165.0
scale = Vector2(0.51, 0.51)

[node name="Left" type="RichTextLabel" parent="LeftPage"]
layout_mode = 0
offset_top = 2.0
offset_right = 278.0
offset_bottom = 1080.0
scale = Vector2(0.5, 0.2)
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 50
fit_content = true
scroll_active = false

[node name="Next" type="TextureButton" parent="."]
offset_left = 11.85
offset_top = 99.1334
offset_right = 28.85
offset_bottom = 116.133
texture_normal = ExtResource("3_fj6l6")

[node name="Back" type="TextureButton" parent="."]
offset_left = -15.2
offset_top = 114.8
offset_right = 1.80004
offset_bottom = 131.8
rotation = 3.14159
texture_normal = ExtResource("4_sbxrk")

[node name="CloseButton" type="TextureButton" parent="."]
offset_left = 74.0
offset_top = -75.7333
offset_right = 1098.0
offset_bottom = 948.267
scale = Vector2(0.01, 0.01)
texture_normal = ExtResource("5_hbj6e")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="button_down" from="Next" to="." method="_on_next_button_down"]
[connection signal="button_down" from="Back" to="." method="_on_back_button_down"]
[connection signal="button_down" from="CloseButton" to="." method="_on_close_button_button_down"]
